--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-elements": "^3.4.2",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-vector-icons": "^9.2.0"
   },
