--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -15,21 +15,23 @@
     "@reduxjs/toolkit": "^1.8.6",
     "async-storage": "^0.1.0",
     "expo": "~46.0.9",
+    "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^8.10.0",
-    "lottie-react-native": "^5.1.4",
+    "lottie-react-native": "5.1.3",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-bouncy-checkbox": "^3.0.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-reanimated": "^2.12.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^3.4.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.2.0",
-    "tslib": "^2.4.0"
+    "tslib": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
